<resources>
    <string name="app_name">浏览器</string>

    <string name="behavior_contents">com.news.browser.widget.behavior.uc.UcNewsContentBehavior</string>
    <string name="behavior_uc_header_pager">com.news.browser.widget.behavior.uc.UcNewsHeaderPagerBehavior</string>
    <string name="behavior_uc_title">com.news.browser.widget.behavior.uc.UcNewsTitleBehavior</string>
    <string name="behavior_uc_news_tab">com.news.browser.widget.behavior.uc.UcNewsTabBehavior</string>

    <string name="exit_app_toast">"再按一次退出程序"</string>

    <string name="title_warning">警告</string>
    <string name="message_blocked_local">本地文件已被阻止加载</string>
    <string name="action_open">打开</string>
    <string name="location">允许获取位置信息</string>
    <string name="message_location">\n你想使用你的位置吗？</string>
    <string name="action_allow">允许</string>
    <string name="action_dont_allow">不允许</string>
    <string name="loading">正在加载&#8230;</string>
    <string name="loading_end">没有更多了</string>
    <string name="action_new_tab">主页</string>
    <string name="untitled">无法抓取到标题</string>
    <string name="hint_username">用户名</string>
    <string name="title_sign_in">登录</string>
    <string name="action_cancel">取消</string>
    <string name="message_certificate_date_invalid">证书数据无效</string>
    <string name="message_certificate_invalid">证书无效</string>
    <string name="message_certificate_expired">证书过期啦</string>
    <string name="message_certificate_domain_mismatch">证书与网站不匹配</string>
    <string name="message_certificate_not_yet_valid">证书未生效</string>
    <string name="message_certificate_untrusted">不可信的证书</string>
    <string name="action_yes">确认</string>
    <string name="action_no">取消</string>
    <string name="title_form_resubmission">重新提交表单</string>
    <string name="message_form_resubmission">你想重新发送数据吗？</string>
    <string name="hint_password">密码</string>
    <string name="message_insecure_connection">不安全的连接: %1$s 确定继续?</string>
    <string name="bookmark_export_path">书签已导出到</string>
    <string name="message_import">书签导入成功</string>
    <string name="title_error">错误</string>
    <string name="import_bookmark_error">无法从文件导入书签</string>
    <string name="action_ok">确认</string>
    <string name="max_tabs">达到最大标签数</string>
    <string name="search_hint">搜索或输入网址</string>

    <string name="tasks_manager_demo_status_loading">加载中...</string>
    <string name="tasks_manager_demo_status_pending">队列中</string>
    <string name="tasks_manager_demo_status_started">开始下载</string>
    <string name="tasks_manager_demo_status_connected">已连接上</string>
    <string name="tasks_manager_demo_status_progress">下载中...</string>
    <string name="tasks_manager_demo_status_downloading" formatted="false">正在下载 %d</string>
    <string name="tasks_manager_demo_status_error">出错</string>
    <string name="tasks_manager_demo_status_paused">暂停</string>
    <string name="tasks_manager_demo_status_completed">下载完成</string>
    <string name="tasks_manager_demo_status_not_downloaded">未下载</string>

    <string name="start">开始</string>
    <string name="go_on">继续</string>
    <string name="pause">暂停</string>
    <string name="delete">删除</string>
    <string name="open">打开</string>

    <string name="dialog_download">确定下载此文件？</string>
    <string name="action_download">下载</string>
    <string name="prompt_download">下载提示</string>
    <string name="prompt_confirm">确认提示</string>

    <string name="download_sdcard_busy_dlg_msg">存储设备正忙，为确保正常下载此文件，请关闭USB大容量存储。</string>
    <string name="download_sdcard_busy_dlg_title">USB 存储不可用</string>
    <string name="download_no_sdcard_dlg_msg">为正常下载此文件需要 USB 存储设备。</string>
    <string name="download_no_sdcard_dlg_title">未找到存储卡</string>
    <string name="problem_download">连接无效，无法下载</string>
    <string name="cannot_download">仅可下载以 \"http\" 或 \"https\" 开头的链接地址</string>
    <string name="problem_location_download">存储位置错误</string>

    <!--rx提示-->
    <string name="prompt_task_exist">任务已在队列中</string>
    <string name="prompt_same_file_exist">文件已存在</string>
    <string name="prompt_task_start">开始下载</string>
    <string name="menu_add_bookmark">添加书签</string>
    <string name="menu_bookmark_history">书签/历史</string>
    <string name="menu_refresh">刷新</string>
    <string name="menu_setting">设置</string>
    <string name="menu_download">下载</string>
    <string name="exit">退出</string>
    <string name="enter">进入</string>
    <string name="bookmark_add_to">添加至</string>
    <string name="bookmark">书签</string>
    <string name="bookmark_home">主页书签</string>
    <string name="bookmark_edit_cancel">取消</string>
    <string name="bookmark_edit_save">保存</string>
    <string name="bookmark_edit_title">编辑书签</string>
    <string name="bookmark_edit">编辑</string>
    <string name="name_url">名称/网址</string>
    <string name="remove">删除</string>
    <string name="download_title">下载</string>
    <!--rx提示-->

    <string name="prompt_file_deleted">文件已被删除，是否重新下载？</string>
    <string name="prompt_deleted">删除该任务及文件？</string>
    <string name="setting">设置</string>
    <string name="follow_system">跟随系统</string>
    <string name="set_search_engine">设置搜索引擎</string>
    <string name="default_download_path">默认下载路径</string>
    <string name="check_new_version">检查新版本</string>
    <string name="clear_cache">清除缓存</string>
    <string name="feedback">意见反馈</string>
    <string name="prompt_remove_image">删除提示</string>
    <string name="about_browser">关于浏览器</string>
    <string name="ignore">忽略</string>
    <string name="cancel_download">取消下载</string>
    <string name="download_background">后台下载</string>
    <string name="updating">版本更新中</string>
    <string name="update_description">更新说明：</string>
    <string name="update_next_time">下次更新</string>
    <string name="update_right_now">立即更新</string>

    <string name="clear_search_history">清空搜索历史</string>
    <string name="remove_record">清除该条记录</string>
    <string name="remove_all_tab">关闭全部</string>
    <string name="new_create">新建</string>
    <string name="window_complete">完成</string>
    <string name="complete">完成</string>
    <string name="hot_site">热门网站</string>

    <string name="pic_remove">确定删除附图吗？</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="same_pic_message">您选择了重复图片。</string>

    <string name="declaration">
        (1) 本软件为用户提供包括但不限于以下服务：浏览网页、网址及搜索联想推荐、网址导航、常用站点图标获取、安全服务、书签等。除非另有明确规定，基于目前服务所新增的任何功能均无条件地适用本服务条款。\n\n
        (2) 本软件完全免费，您可以在遵循本协议的基础上自由的使用和传播它，您一旦使用本软件，则表示您已同意本协议条款。\n\n
        (3) 在使用本软件提供的服务过程中，可能会产生网络流量费用，该费用由无线运营商收取，与本软件无关，产生费用参照具体运营商收费标准，请用户自主选择是否使用。\n\n
        (4) 本软件不承诺所提供的服务一定能满足用户的需求，亦不担保网络服务不会中断，对网络服务的及时性、安全性、准确性不做任何担保。\n\n
        (5) 本软件将严格保护用户隐私，除法律法规规定的情形外，未经许可不会向第三方公开、透露用户个人信息。我们对相关信息采用专业加密存储与传输方式，保障用户个人信息的安全。\n\n
        深圳市朵盛科技有限公司 2017年8月
    </string>

    <string name="send_message_title">发送中...</string>
    <string name="send_message">正在采集模块信息，以便帮助工程师尽快解决该问题</string>
    <string name="send_failure_title">发送失败</string>
    <string name="send_failure_message">服务器错误，请稍后重试</string>
    <string name="send_succeed_title">发送成功</string>
    <string name="send_succeed_message">感谢您的支持</string>
    <string name="reset">恢复默认设置</string>

    <string name="show_net_allow_title">欢迎使用浏览器</string>
    <string name="show_net_allow_message">本软件使用完全免费，在使用过程中需要连接网络，定位位置信息</string>
    <string name="edit_bookmark_name">名称</string>
    <string name="edit_bookmark_url">网址</string>
    <string name="download_right_now">立即下载</string>
    <string name="save_image">保存图片</string>
    <string name="show_image">查看图片</string>
    <string name="load_error">呃，没加载出来</string>
    <string name="refresh_after_connected">请连接网络后点击空白处刷新</string>

    <string name="version_name">版本号：</string>
    <string name="size">大小：</string>

</resources>
