<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center"
        android:paddingLeft="@dimen/margin_horizontal"
        android:paddingRight="@dimen/margin_horizontal"
        android:text="@string/bookmark_edit_cancel"
        android:textColor="@color/color_blue"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:paddingLeft="@dimen/margin_horizontal"
        android:paddingRight="@dimen/margin_horizontal"
        android:text="@string/bookmark_edit_title"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_save"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:gravity="center"
        android:paddingLeft="@dimen/margin_horizontal"
        android:paddingRight="@dimen/margin_horizontal"
        android:text="@string/bookmark_edit_save"
        android:textColor="@color/color_blue"
        android:textSize="14sp" />

</RelativeLayout>