<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <FrameLayout
        android:id="@id/id_uc_news_header_pager"
        android:layout_width="match_parent"
        android:layout_height="290dip"
        android:background="@drawable/bg_blue_shape"
        android:paddingTop="80dp"
        app:layout_behavior="@string/behavior_uc_header_pager">

        <include layout="@layout/include_search_qr_code"/>

    </FrameLayout>

    <!--<LinearLayout-->
        <!--android:id="@id/id_uc_news_header_pager"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="290dip"-->
        <!--android:background="@android:color/holo_blue_light"-->
        <!--android:orientation="vertical"-->
        <!--android:paddingTop="80dp"-->
        <!--app:layout_behavior="@string/behavior_uc_header_pager">-->

    <!--</LinearLayout>-->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/uc_news_header_title_height"
        android:layout_marginTop="@dimen/uc_news_header_title_init_offset"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        app:layout_behavior="@string/behavior_uc_title">

        <TextView
            android:id="@+id/news_title_tv"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="12dip"
            android:paddingRight="12dip"
            android:text="UC头条"
            android:textColor="@android:color/white" />

        <ImageView
            android:id="@+id/iv_search"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="12dip"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="3dip"
            android:src="@drawable/ic_search_white" />
    </FrameLayout>


    <android.support.design.widget.TabLayout
        android:id="@+id/id_uc_news_tab"
        android:layout_width="match_parent"
        android:layout_height="@dimen/uc_news_tabs_height"
        android:background="@color/colorPrimary"
        app:layout_behavior="@string/behavior_uc_news_tab"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/colorPrimaryLight"
        app:tabSelectedTextColor="@color/colorPrimaryLight"
        app:tabTextColor="@color/colorPrimaryIcons" />


    <com.example.zy1584.mybase.widget.NewsViewPager
        android:id="@+id/id_uc_news_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        app:layout_behavior="@string/behavior_contents" />

</android.support.design.widget.CoordinatorLayout>
