<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bg_dialog"
        android:layout_marginLeft="@dimen/margin_horizontal"
        android:layout_marginRight="@dimen/margin_horizontal"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/tv_first_item"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/margin_horizontal"
            android:layout_marginRight="@dimen/margin_horizontal"
            android:gravity="center"
            android:text="@string/show_image"
            android:textColor="@color/text_blue"
            android:textSize="12sp" />

        <include layout="@layout/include_line_horizontal"/>

        <TextView
            android:id="@+id/tv_second_item"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/margin_horizontal"
            android:layout_marginRight="@dimen/margin_horizontal"
            android:gravity="center"
            android:text="@string/save_image"
            android:textColor="@color/text_blue"
            android:textSize="12sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/margin_horizontal"
        android:layout_marginLeft="@dimen/margin_horizontal"
        android:layout_marginRight="@dimen/margin_horizontal"
        android:layout_marginTop="5dp"
        android:background="@drawable/shape_bg_dialog"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/text_gray"
        android:textSize="12sp" />


</LinearLayout>