<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_bg_dialog"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="42dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/margin_horizontal"
            android:layout_marginRight="@dimen/margin_horizontal"
            android:maxLines="1"
            android:text="@string/prompt_download"
            android:textColor="@color/text_black"
            android:textSize="14sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_file_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_horizontal"
        android:layout_marginRight="@dimen/margin_horizontal"
        android:layout_marginTop="11dp"
        android:maxLines="3"
        android:shadowColor="@color/text_gray"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_file_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_horizontal"
        android:layout_marginRight="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/margin_top"
        android:maxLines="1"
        android:shadowColor="@color/text_gray"
        android:textSize="12sp" />

    <include
        layout="@layout/include_line_horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_line"
        android:layout_marginTop="25dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_left"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/text_gray"
            android:textSize="14sp" />

        <include layout="@layout/include_line_vertical" />

        <TextView
            android:id="@+id/tv_right"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/download_right_now"
            android:textColor="@color/text_blue"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>