<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/shape_bg_dialog"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="12.5dp"
        android:layout_marginRight="12.5dp"
        android:text="@string/updating"
        android:maxLines="1"
        android:textSize="12sp"
        android:layout_gravity="center_horizontal"
        android:shadowColor="@color/text_gray"
        />

    <include
        android:id="@+id/view_line_title"
        layout="@layout/include_line_horizontal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="12.5dp"
        android:layout_marginRight="12.5dp">

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            />

        <TextView
            android:id="@+id/tv_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/pb_task"
        style="?android:attr/progressBarStyleHorizontal"
        android:progressDrawable="@drawable/progressbar_preview"
        android:layout_marginTop="6.5dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="12.5dp"
        android:layout_marginRight="12.5dp"
        android:layout_width="match_parent"
        android:layout_height="1.5dp"/>

    <include layout="@layout/include_line_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView
            android:id="@+id/tv_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/cancel_download"
            android:background="?attr/selectableItemBackground"
            />

        <include layout="@layout/include_line_vertical"/>

        <TextView
            android:id="@+id/tv_right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/download_background"
            android:background="?attr/selectableItemBackground"
            />

    </LinearLayout>

</LinearLayout>