<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/bg_dialog"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="12.5dp"
        android:layout_marginRight="12.5dp"
        android:text="检测到新版本"
        android:maxLines="1"
        android:textSize="12sp"
        android:layout_gravity="center_horizontal"
        android:shadowColor="@color/text_gray"

        />

    <include
        android:id="@+id/view_line_title"
        layout="@layout/include_line_horizontal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12.5dp"
        android:layout_marginRight="12.5dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        >

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/tv_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            />

        <TextView
            android:id="@+id/tv_update_description"
            android:layout_below="@id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/update_description"
            />

        <TextView
            android:id="@+id/tv_description"
            android:layout_below="@id/tv_update_description"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>


    <include layout="@layout/include_line_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView
            android:id="@+id/tv_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/update_next_time"
            android:gravity="center"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"
            />

        <include layout="@layout/include_line_vertical"/>

        <TextView
            android:id="@+id/tv_right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/update_right_now"
            android:gravity="center"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"
            />

    </LinearLayout>

</LinearLayout>